Updated some files

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,23 @@
 {
-    "require": {
-        "phpoffice/phpspreadsheet": "^2.0",
-        "tecnickcom/tcpdf": "^6.7",
-        "phpoffice/phpexcel": "^1.8"
+  "name": "shuvo/scm",
+  "description": "Raw PHP project For school management",
+  "type": "project",
+  "require": {
+    "phpoffice/phpspreadsheet": "^1.29",
+    "phpoffice/phpexcel": "^1.8",
+    "markbaker/complex": "^3.0",
+    "markbaker/matrix": "^3.0",
+    "maennchen/zipstream-php": "^3.1",
+    "psr/http-client": "^1.0",
+    "psr/http-factory": "^1.0",
+    "psr/http-message": "^1.0",
+    "symfony/polyfill-mbstring": "^1.27",
+    "tecnickcom/tcpdf": "^6.6",
+    "voku/simple_html_dom": "^4.7"
+  },
+  "autoload": {
+    "psr-4": {
+      "": "src/"
     }
+  }
 }
