laptop 2 updated shuvo dec with backup

--- a/config.json
+++ b/config.json
@@ -2,5 +2,5 @@
     "DB_SERVER": "localhost",
     "DB_USERNAME": "root",
     "DB_PASSWORD": "",
-    "DB_NAME": "zpsc_main"
+    "DB_NAME": "sch_main"
 }
